tests/NormalTests/paczka1/fuzzy1/41804992.err
Error in line 3: QqahniBDw A8K7 4K,2
Error in line 7: QqahniBDw S634 14,1
Error in line 13: QqahniBDw A807 86,2
Error in line 14: QqahniBDw S997 38,2
Error in line 16: S634 S997 32,52
Error in line 19: S634 S997 14,2
Error in line 33: nyblLBHP S634 81,11
Error in line 31: inaZE2b S997 44,7
Error in line 29: Onx S997 86,7
